--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Transfer JAR to EC2 via Bastion
         run: |
           scp -o ProxyJump=${{ secrets.SSH_USER }}@${{ secrets.BASTION_IP }} \
-              build/libs/app.jar \
+              build/libs/busan-0.0.1-SNAPSHOT.jar \
               ${{ secrets.SSH_USER }}@${{ secrets.PROD_IP }}:/home/ubuntu/app/jar/app.jar
 
       - name: Trigger Deployment
