--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,14 +29,17 @@ jobs:
 
       - name: Transfer JAR to EC2 via Bastion
         run: |
-          scp -o ProxyJump=${{ secrets.SSH_USER }}@${{ secrets.BASTION_IP }} \
+          scp -o ProxyJump=${{ secrets.SSH_USER }}@${{ secrets.BASTION_IP }} -o StrictHostKeyChecking=no \
               build/libs/busan-0.0.1-SNAPSHOT.jar \
               ${{ secrets.SSH_USER }}@${{ secrets.PROD_IP }}:/home/ubuntu/app/jar/app.jar
 
       - name: Trigger Deployment
         run: |
-          ssh -o ProxyJump=${{ secrets.SSH_USER }}@${{ secrets.BASTION_IP }} \
+          ssh -o ProxyJump=${{ secrets.SSH_USER }}@${{ secrets.BASTION_IP }} -o StrictHostKeyChecking=no \
               ${{ secrets.SSH_USER }}@${{ secrets.PROD_IP }} << 'EOF'
+                cd /home/ubuntu/app
+                ./switch.sh
+          EOF
                 cd /home/ubuntu/app
                 ./switch.sh
           EOF
