--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,25 +22,16 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Add known_hosts
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.KNOWN_HOSTS }}" >> ~/.ssh/known_hosts
-
       - name: Transfer JAR to EC2 via Bastion
         run: |
-          scp -o ProxyJump=${{ secrets.SSH_USER }}@${{ secrets.BASTION_IP }} -o StrictHostKeyChecking=no \
+          scp -o ProxyJump=${{ secrets.SSH_USER }}@${{ secrets.BASTION_IP }} \
               build/libs/busan-0.0.1-SNAPSHOT.jar \
               ${{ secrets.SSH_USER }}@${{ secrets.PROD_IP }}:/home/ubuntu/app/jar/app.jar
 
       - name: Trigger Deployment
         run: |
-          ssh -o ProxyJump=${{ secrets.SSH_USER }}@${{ secrets.BASTION_IP }} -o StrictHostKeyChecking=no \
+          ssh -o ProxyJump=${{ secrets.SSH_USER }}@${{ secrets.BASTION_IP }} \
               ${{ secrets.SSH_USER }}@${{ secrets.PROD_IP }} << 'EOF'
                 cd /home/ubuntu/app
                 ./switch.sh
           EOF
-                cd /home/ubuntu/app
-                ./switch.sh
-          EOF
-          
