--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Setup SSH known_hosts
         run: |
           mkdir -p ~/.ssh
-          ssh-keyscan -H ${{ secrets.BASTION_IP }} >> ~/.ssh/known_hosts
-          ssh-keyscan -H ${{ secrets.PROD_IP }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ secrets.BASTION_IP }} >> ~/.ssh/known_hosts || true
+          ssh-keyscan -H ${{ secrets.PROD_IP }} >> ~/.ssh/known_hosts || true
       
       - name: Transfer JAR to EC2 via Bastion
         run: |
