--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,21 +22,32 @@ jobs:
           mkdir -p ~/.ssh
           ssh-keyscan -H ${{ secrets.BASTION_IP }} >> ~/.ssh/known_hosts || true
           ssh-keyscan -H ${{ secrets.PROD_IP }} >> ~/.ssh/known_hosts || true
+          chmod 644 ~/.ssh/known_hosts
 
       - name: Setup SSH Agent
         uses: webfactory/ssh-agent@v0.7.0
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Transfer JAR to EC2 via Bastion (ProxyCommand)
-        run: |
-          scp -o "ProxyCommand=ssh -W %h:%p -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.BASTION_IP }}" \
-            build/libs/busan-0.0.1-SNAPSHOT.jar \
-            ${{ secrets.SSH_USER }}@${{ secrets.PROD_IP }}:/home/ubuntu/app/jar/app.jar
+      - name: Test SSH to Bastion
+        run: ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.BASTION_IP }} hostname
 
-      - name: Trigger Deployment (ProxyCommand)
+      - name: Test SSH to Prod via Bastion
         run: |
           ssh -o "ProxyCommand=ssh -W %h:%p -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.BASTION_IP }}" \
+              -o StrictHostKeyChecking=no \
+              ${{ secrets.SSH_USER }}@${{ secrets.PROD_IP }} hostname
+
+      - name: Transfer JAR to Prod via Bastion
+        run: |
+          scp -o "ProxyCommand=ssh -W %h:%p -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.BASTION_IP }}" \
+              build/libs/busan-0.0.1-SNAPSHOT.jar \
+              ${{ secrets.SSH_USER }}@${{ secrets.PROD_IP }}:/home/ubuntu/app/jar/app.jar
+
+      - name: Trigger Deployment
+        run: |
+          ssh -o "ProxyCommand=ssh -W %h:%p -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.BASTION_IP }}" \
+              -o StrictHostKeyChecking=no \
               ${{ secrets.SSH_USER }}@${{ secrets.PROD_IP }} << 'EOF'
                 cd /home/ubuntu/app
                 ./switch.sh
