--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,33 +1,39 @@
 spring:
-  port: 8080
-  address: 0.0.0.0
+  server:
+    port: 8080
+    address: 0.0.0.0
+
   logging:
     level:
       root: info
 
-  #  kakao:
-  #    client-id: ${Client_ID}
   docker:
     compose:
       enabled: false
+
   mvc:
     servlet:
       encoding:
         charset: UTF-8
         enabled: true
         force: true
+
   jackson:
     time-zone: Asia/Seoul
+
   config:
     import: optional:file:.env
+
   datasource:
     url: ${RDS_URL}
     username: ${RDS_USERNAME}
     password: ${RDS_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
+
   sql:
     init:
       mode: never
+
   jpa:
     hibernate:
       ddl-auto: update
@@ -47,9 +53,3 @@ management:
     web:
       exposure:
         include: health
-
-#  data:
-#    redis:
-#      #host: redis-container
-#      host: localhost
-#      port: 6379
