chore: 환경변수 설정

--- a/docker-compose.8082.yml
+++ b/docker-compose.8082.yml
@@ -9,5 +9,7 @@ services:
       - "8082:8080"
     volumes:
       - ./jar:/app
+    env_file:
+      - .env
     environment:
       - SPRING_PROFILES_ACTIVE=prod
