--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,10 @@
-name: Deploy to Prod via Bastion
+name: Deploy to EC2 on main merge
 
 on:
   pull_request:
     types: [closed]
-    branches: [main]
+    branches:
+      - main
 
 jobs:
   deploy:
@@ -11,46 +12,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Build JAR
         run: ./gradlew clean build -x test
 
-      - name: Setup SSH known_hosts
-        run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan -H ${{ secrets.BASTION_IP }} >> ~/.ssh/known_hosts || true
-          ssh-keyscan -H ${{ secrets.PROD_IP }} >> ~/.ssh/known_hosts || true
-          chmod 644 ~/.ssh/known_hosts
-
-      - name: Setup SSH Agent (Bastion + Prod Key 등록)
-        uses: webfactory/ssh-agent@v0.7.0
+      - name: Upload JAR to EC2
+        uses: appleboy/scp-action@v0.1.5
         with:
-          ssh-private-key: |
-            ${{ secrets.BASTION_SSH_PRIVATE_KEY }}
-            ${{ secrets.PROD_SSH_PRIVATE_KEY }}
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_KEY }}
+          source: build/libs/*.jar
+          target: /home/ubuntu/app/app.jar
 
-      - name: Test SSH to Bastion
-        run: ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.BASTION_IP }} hostname
-
-      - name: Test SSH to Prod via Bastion
-        run: |
-          ssh -o "ProxyCommand=ssh -W %h:%p -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.BASTION_IP }}" \
-              -o StrictHostKeyChecking=no \
-              ${{ secrets.SSH_USER }}@${{ secrets.PROD_IP }} hostname
-
-      - name: Transfer JAR to Prod via Bastion
-        run: |
-          scp -o "ProxyCommand=ssh -W %h:%p -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.BASTION_IP }}" \
-              build/libs/busan-0.0.1-SNAPSHOT.jar \
-              ${{ secrets.SSH_USER }}@${{ secrets.PROD_IP }}:/home/ubuntu/app/jar/app.jar
-
-      - name: Trigger Deployment
-        run: |
-          ssh -o "ProxyCommand=ssh -W %h:%p -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.BASTION_IP }}" \
-              -o StrictHostKeyChecking=no \
-              ${{ secrets.SSH_USER }}@${{ secrets.PROD_IP }} << 'EOF'
-                cd /home/ubuntu/app
-                ./switch.sh
-          EOF
+      - name: SSH and deploy Docker container
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            docker pull your-docker-image:latest || true
+            docker stop myapp || true
+            docker rm myapp || true
+            docker run -d --name myapp --env-file /home/ubuntu/app/.env -p 8080:8080 openjdk:17-jdk java -jar /home/ubuntu/app/app.jar
