--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,12 +1,27 @@
-upstream backend {
-    server 127.0.0.1:8081;  # switch.sh에서 8082로 전환됨
-}
+events {}
 
-server {
-    listen 80;
-    location / {
-        proxy_pass http://backend;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+    sendfile        on;
+
+    server {
+        listen 80;
+        server_name _;
+
+        location / {
+            proxy_pass http://spring-app:8080;
+            proxy_http_version 1.1;
+
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # optional: for WebSocket or SSE
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+
     }
 }
