--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: build/libs/*.jar
+          source: build/libs/busan-0.0.1-SNAPSHOT.jar
           target: /home/ubuntu/app/app.jar
 
       - name: SSH and deploy Docker container
@@ -34,7 +34,6 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            docker pull your-docker-image:latest || true
             docker stop myapp || true
             docker rm myapp || true
             docker run -d --name myapp --env-file /home/ubuntu/app/.env -p 8080:8080 openjdk:17-jdk java -jar /home/ubuntu/app/app.jar
