--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           source: build/libs/app.jar
-          target: /home/ubuntu/app/app.jar
+          target: /home/ubuntu/app/busan-0.0.1-SNAPSHOT.jar
 
       - name: SSH and deploy Docker container
         uses: appleboy/ssh-action@v0.1.7
