--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,8 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: build/libs/app.jar
-          target: /home/ubuntu/app/busan-0.0.1-SNAPSHOT.jar
+          source: build/libs/busan-0.0.1-SNAPSHOT.jar
+          target: /home/ubuntu/app/app.jar
 
       - name: SSH and deploy Docker container
         uses: appleboy/ssh-action@v0.1.7
