--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,39 +1,46 @@
-name: Deploy to EC2 on main merge
+name: CI/CD
 
 on:
+  push:
   pull_request:
-    types: [closed]
     branches:
-      - main
+      - dev
 
 jobs:
-  deploy:
-    if: github.event.pull_request.merged == true
+  backend-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout source code
         uses: actions/checkout@v3
 
-      - name: Build JAR
-        run: ./gradlew clean build -x test
+      - name: Grant execute permission to gradlew
+        run: chmod +x ./gradlew
 
-      - name: Upload JAR to EC2
-        uses: appleboy/scp-action@v0.1.5
+      - name: Build with Gradle
+        run: ./gradlew clean build
+
+      - name: Build Docker image
+        run: docker build -t ggamnunq/busan .
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Push Docker image
+        run: docker push ggamnunq/busan
+
+      - name: Connect to EC2 & Deploy
+        uses: appleboy/ssh-action@v0.1.6
         with:
           host: ${{ secrets.EC2_HOST }}
-          username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
-          source: build/libs/busan-0.0.1-SNAPSHOT.jar
-          target: /home/ubuntu/app/app.jar
-
-      - name: SSH and deploy Docker container
-        uses: appleboy/ssh-action@v0.1.7
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          port: ${{ secrets.WAS_SSH_PORT }}
           script: |
-            docker stop myapp || true
-            docker rm myapp || true
-            docker run -d --name myapp --env-file /home/ubuntu/app/.env -p 8080:8080 openjdk:17-jdk java -jar /home/ubuntu/app/app.jar
+            cd /home/ubuntu/app
+            docker-compose down
+            docker pull ggamnunq/busan
+            docker-compose up -d
