--- a/.github/workflows/discord.yml
+++ b/.github/workflows/discord.yml
@@ -14,16 +14,20 @@ jobs:
         id: get_commits
         run: |
           echo "Fetching commits for PR #${{ github.event.pull_request.number }}"
-          
           response=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Accept: application/vnd.github+json" \
             "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/commits")
-          
-          echo "$response" | jq -r '.[] | "- " + .commit.message' > commit_messages.txt
-          
-          # commit_messages 출력을 한 변수에 담기 위해 join
+
+          echo "$response" > response.json
+          cat response.json
+
+          if echo "$response" | jq -e . >/dev/null 2>&1; then
+            echo "$response" | jq -r '.[] | "- " + .commit.message' > commit_messages.txt
+          else
+            echo "[]" > commit_messages.txt
+          fi
+
           commit_messages=$(paste -sd '\n' commit_messages.txt)
-          
           echo "commit_messages<<EOF" >> $GITHUB_OUTPUT
           echo "$commit_messages" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
