chore: 사용되지 않는 도커 이미지 제거하도록 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,5 +42,7 @@ jobs:
           script: |
             cd /home/ubuntu/app
             docker-compose down
+            docker rmi ggamnunq/busan || true
+            docker image prune -f
             docker pull ggamnunq/busan
             docker-compose up -d
