--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,11 +3,14 @@ name: CI/CD
 on:
   push:
   pull_request:
+    types:
+      - closed
     branches:
       - main
 
 jobs:
   backend-deploy:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
