--- a/.github/workflows/discord.yml
+++ b/.github/workflows/discord.yml
@@ -28,23 +28,27 @@ jobs:
 
           echo "$COMMITS_JSON" > commits.json
 
-          # 커밋 리스트 메시지 생성 (3개 제한, 링크 포함)
-          COMMITS_MSG=$(echo "$COMMITS_JSON" | jq -r '[.[] | {sha: .sha[:7], url: .html_url, message: .commit.message}] | .[:3] | map("- [\(.sha)](\(.url)) \(.message)") | join("\n")')
+          COMMITS_COUNT=$(echo "$COMMITS_JSON" | jq 'length')
+          COMMITS_MSG=$(echo "$COMMITS_JSON" | jq -r '[.[] | {sha: .sha[:7], url: .html_url, message: .commit.message}] | map("- [\(.sha)](\(.url)) \(.message)") | join("\n")')
 
+          echo "COMMITS_COUNT=$COMMITS_COUNT" >> $GITHUB_ENV
           echo "COMMITS_MSG<<EOF" >> $GITHUB_ENV
           echo "$COMMITS_MSG" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
+      
 
       - name: Send Discord notification
         run: |
           USERNAME="${{ github.actor }}"
           NOW=$(date '+%Y-%m-%d %H:%M')
 
-          CONTENT="🚀 **배포 완료** (main 브랜치)\n\n배포자: @$USERNAME\n커밋 ${#COMMITS_MSG[@]}개 포함\n배포 시간: $NOW\n\n커밋 내역:\n$COMMITS_MSG"
+          # JSON 문자열을 jq로 안전하게 생성
+          JSON_PAYLOAD=$(jq -n --arg content "🚀 **배포 완료** (main 브랜치)\n\n배포자: @$USERNAME\n커밋 $COMMITS_COUNT개 포함\n배포 시간: $NOW\n\n커밋 내역:\n$COMMITS_MSG" '{content: $content}')
+
 
           curl -H "Content-Type: application/json" \
             -X POST \
-            -d "{\"content\": \"$CONTENT\"}" \
+            -d "$JSON_PAYLOAD" \
             "$DISCORD_WEBHOOK_URL"
         env:
           COMMITS_MSG: ${{ env.COMMITS_MSG }}
