--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,12 @@ dependencies {
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 	implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
 
+	// xml
+	implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.17.0")
+
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+
 
 }
 
