feat: AOP로 API 호출 시 로그 출력하도록 구현   - AOP 의존성 추가   - CommonPointcut 클래스 생성하여 RestController Annotation 메서드에 Pointcut 설정   - @Around메서드 작성하여 전후로 로그(slf4j) 출력하도록 작성

--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,10 @@ dependencies {
 	// xml
 	implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.17.0")
 
+	// aop
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
+
+
 
 }
 
